# congenial-doodle

./: .gitignore  README.md  hubconf.py  inference.py  inference_batch.py  inference_v2.py  inference_v3.py  main.py  monitoring.py  onnx_inference.py  pyproject.toml  spawn_tmux.sh
data/: gene_annos_kitti_demo.py  gene_annos_nyu_demo.py
mono/model/: __init__.py
mono/model/backbones/: ConvNeXt.py  ViT_DINO.py  ViT_DINO_reg.py
mono/model/decode_heads/: RAFTDepthNormalDPTDecoder5.py
mono/model/model_pipelines/: __base_model__.py  dense_pipeline.py
mono/tools/: test_scale_cano.py
mono/utils/: avg_meter.py  comm.py  do_test.py  running.py  transform.py  visualization.py
onnx/: test_onnx.py
training/data_server_info/: __init__.py
training/kitti_json_files/: generate_json.py
training/mono/datasets/: __base_dataset__.py  __init__.py  any_dataset.py  argovers2_dataset.py  blendedmvg_omni_dataset.py  cityscapes_dataset.py  ddad_dataset.py  diml_dataset.py  diode_dataset.py  distributed_sampler.py  drivingstereo_dataset.py  dsec_dataset.py  eth3d_dataset.py  fisheye_dataset.py  hm3d_dataset.py  hypersim_dataset.py  ibims_dataset.py  kitti_dataset.py  lyft_dataset.py  mapillary_psd_dataset.py  matterport3d_dataset.py  nuscenes_dataset.py  nyu_dataset.py  pandaset_dataset.py  replica_dataset.py  scannet_dataset.py  taskonomy_dataset.py  uasol_dataset.py  virtualkitti_dataset.py  waymo_dataset.py
training/mono/model/: __base_model__.py  __init__.py  criterion.py  monodepth_model.py
training/mono/tools/: test.py  train.py
training/mono/utils/: avg_meter.py  (+14 more)
(+32 files in other folders)
